SSO-49 code grant flow docmention generated
