# docs/swagger.json
@@ -253,6 +253,13 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -264,6 +271,63 @@
                     },
                     "400": {
                         "description": "invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/oauth/token": {
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "is used to exchange token.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "OAuth2"
+                ],
+                "summary": "exchange token.",
+                "parameters": [
+                    {
+                        "description": "tokenParam",
+                        "name": "tokenParam",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.AccessTokenRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.TokenResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "no record of code found",
                         "schema": {
                             "$ref": "#/definitions/model.ErrorResponse"
                         }
@@ -407,6 +471,23 @@
         }
     },
     "definitions": {
+        "dto.AccessTokenRequest": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "Authorization code generated by the authorization server.",
+                    "type": "string"
+                },
+                "grant_type": {
+                    "description": "GrantType is the type of flow the client is following to get access token.\nIt can be either authorization_code or refresh_token.",
+                    "type": "string"
+                },
+                "redirect_uri": {
+                    "description": "Redirection URI used in the initial authorization request.",
+                    "type": "string"
+                }
+            }
+        },
         "dto.Client": {
             "type": "object",
             "properties": {
@@ -755,6 +836,9 @@
         }
     },
     "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
+        },
         "BearerAuth": {
             "type": "apiKey",
             "name": "Authorization",
